src/CAPI/CAPI_Alt.pas


    if elem.NPhases <> 3 then
    begin
        // Handle non-3 phase elements
        if (elem.Nphases = 1) and DSS.ActiveCircuit.PositiveSequence then
        begin
            for i := 1 to 3 * elem.NTerms do
                V012[i] := 0;   // Initialize Result
            iV := 2;  // pos seq is 2nd element in array
            // Populate only phase 1 quantities in Pos seq
            for j := 1 to elem.NTerms do
            begin
                k := (j - 1) * elem.NConds;
                V012[iV] := NodeV[elem.NodeRef[1 + k]];
                Inc(iV, 3);  // inc to pos seq of next terminal
            end;
        end
        // if neither 3-phase or pos seq model, just put in -1.0 for each element
        else
            for i := 1 to 3 * elem.NTerms do
                V012[i] := -1;  // Signify n/A

        Exit;
    end;
    
    // for 3-phase elements
    iV := 1;
    for j := 1 to elem.NTerms do
    begin
        k := (j - 1) * elem.NConds;
        for i := 1 to 3 do
            Vph[i] := NodeV[elem.NodeRef[i + k]];
        Phase2SymComp(@Vph, @V012a);   // Compute Symmetrical components

        for i := 1 to 3 do
        begin     // Stuff it in the result array
            V012[iV] := V012a[i];
            Inc(iV);
        end;
    end;
end;

//------------------------------------------------------------------------------
function IsPDElement(elem: TDSSCktElement): Boolean;
begin
    Result := ((elem.DSSObjType and 3) = PD_ELEMENT)
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_BusNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    Result: PPAnsiCharArray0;
    i: Integer;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, elem.Nterms);
    for i := 1 to elem.Nterms do
        Result[i - 1] := DSS_CopyStringAsPChar(elem.GetBus(i));

end;
//------------------------------------------------------------------------------
function Alt_CE_Get_NumConductors(elem: TDSSCktElement): Integer; CDECL;
begin
    Result := elem.NConds
end;
//------------------------------------------------------------------------------
function Alt_CE_Get_NumTerminals(elem: TDSSCktElement): Integer; CDECL;
begin
    Result := elem.NTerms
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Set_BusNames(elem: TDSSCktElement; ValuePtr: PPAnsiChar; ValueCount: TAPISize); CDECL;
var
    Value: PPAnsiCharArray0;
    i: Integer;
    Count: Integer;
begin
    Value := PPAnsiCharArray0(ValuePtr);
    Count := ValueCount;
    if (Count <> elem.NTerms) AND (DSS_CAPI_EXT_ERRORS) then
    begin
        DoSimpleMsg(elem.DSS, 'The number of buses provided (%d) does not match the number of terminals (%d).', [ValueCount, Integer(elem.NTerms)], 97895);
        Exit;
    end;
    
    if Count > elem.NTerms then
        Count := elem.NTerms;
    for i := 1 to Count do
    begin
        elem.SetBus(i, Value[i - 1]);
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_Currents(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    Result: PDoubleArray0;
begin
    DefaultResult(ResultPtr, ResultCount);
    if MissingSolution(elem) then
        Exit;
        
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * (elem.NConds * elem.NTerms), elem.NConds, elem.NTerms);
    elem.GetCurrents(pComplexArray(Result));
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_Voltages(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
// Bus Voltages at active terminal
var
    Result: PDoubleArray0;
    i, n, iV: Integer;
    Volts: Complex;

    NodeV: pNodeVArray;
begin
    // Return voltages for all terminals
    DefaultResult(ResultPtr, ResultCount);
    
    if MissingSolution(elem) or (elem.NodeRef = NIL) then
        Exit;

    NodeV := elem.DSS.ActiveCircuit.Solution.NodeV;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * (elem.NConds * elem.Nterms), elem.NConds, elem.Nterms);
    // k := (Terminal-1)*numcond;    // RCD 8-30-00 Changed
    iV := 0;
    for i := 1 to elem.NConds * elem.Nterms do
    begin
        n := elem.NodeRef[i];
        Volts := NodeV[n]; // ok if =0
        Result[iV] := Volts.re;
        Inc(iV);
        Result[iV] := Volts.im;
        Inc(iV);
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_Losses(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    Result: PDoubleArray0;
    LossValue: complex;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if MissingSolution(elem) then
        Exit;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
    LossValue := elem.Losses;
    Result[0] := LossValue.re;
    Result[1] := LossValue.im;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_PhaseLosses(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
// Returns Phase losses in kW, kVar
var
    Result: PDoubleArray0;
    NValues, i: Integer;
begin
    if MissingSolution(elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    NValues := elem.NPhases;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * NValues);
    elem.GetPhaseLosses(NValues, pComplexArray(Result));
    for i := 0 to (2 * NValues - 1) do
    begin
        Result[i] *= 0.001;
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_Powers(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
// Return complex kW, kvar in each conductor for each terminal
var
    Result: PDoubleArray0;
    NValues,
    i: Integer;
begin
    if MissingSolution(elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    NValues := elem.NConds * elem.Nterms;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * NValues, elem.NConds, elem.NTerms);
    elem.GetPhasePower(pComplexArray(ResultPtr));
    for i := 0 to (2 * NValues - 1) do
        Result[i] *= 0.001;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_SeqCurrents(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
// All sequence currents of active ciruit element
// returns magnitude only.
var
    Result: PDoubleArray0;
    i: Integer;
    i012: pComplexArray;
    S: String;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if MissingSolution(elem) or (not elem.Enabled) then
        Exit;

    try
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 3 * elem.NTerms, 3, elem.NTerms);

        i012 := Allocmem(sizeof(Complex) * 3 * elem.Nterms);
        // get complex seq voltages
        _CalcSeqCurrents(elem, i012);
        // return 0 based array
        for i := 1 to 3 * elem.Nterms do
            Result[i - 1] := Cabs(i012[i]);  // return mag only

        Reallocmem(i012, 0);  // throw away temp memory

    except
        On E: Exception do
        begin
            S := E.message + CRLF +
                'Element=' + elem.Name + CRLF +
                'Nphases=' + IntToStr(elem.Nphases) + CRLF +
                'NTerms=' + IntToStr(elem.NTerms) + CRLF +
                'NConds =' + IntToStr(elem.NConds);
            DoSimpleMsg(elem.DSS, S, 5012);
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_SeqPowers(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
// All seq Powers of active 3-phase circuit element
// returns kW + j kvar
var
    Result: PDoubleArray0;
    Nvalues, i, j, k, n, icount: Integer;
    S: Complex;
    VPh, V012: Complex3;
    IPh, I012: Complex3;
    cBuffer: pComplexArray;
    NodeV: pNodeVArray;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if MissingSolution(elem) or (elem.NodeRef = NIL) then // or (not elem.Enabled)
        Exit;

    NodeV := elem.DSS.ActiveCircuit.Solution.NodeV;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * 3 * elem.NTerms, 3, elem.NTerms); // allocate for kW and kvar
    if elem.NPhases <> 3 then
    begin
        if (elem.Nphases = 1) and elem.DSS.ActiveCircuit.PositiveSequence then
        begin
            NValues := elem.NConds * elem.NTerms;
            cBuffer := Allocmem(sizeof(Complex) * NValues);
            elem.GetCurrents(cBuffer);
            iCount := 2;  // Start with kW1
            // Put only phase 1 quantities in Pos seq
            for j := 1 to elem.NTerms do
            begin
                k := (j - 1) * elem.NConds;
                n := elem.NodeRef[k + 1];
                Vph[1] := NodeV[n];  // Get voltage at node
                S := Vph[1] * cong(cBuffer[k + 1]);   // Compute power per phase
                Result[icount] := S.re * 0.003; // 3-phase kW conversion
                inc(icount);
                Result[icount] := S.im * 0.003; // 3-phase kvar conversion
                inc(icount, 5);
            end;
            Reallocmem(cBuffer, 0);
        end
        else
            for i := 0 to 2 * 3 * elem.NTerms - 1 do
                Result[i] := -1.0;  // Signify n/A
    end
    else
    begin
        NValues := elem.NConds * elem.NTerms;
        cBuffer := Allocmem(sizeof(Complex) * NValues);
        elem.GetCurrents(cBuffer);
        icount := 0;
        for j := 1 to elem.NTerms do
        begin
            k := (j - 1) * elem.NConds;
            for i := 1 to 3 do
                Vph[i] := NodeV[elem.NodeRef[i + k]];
            for i := 1 to 3 do
                Iph[i] := cBuffer[k + i];
            Phase2SymComp(@Iph, @I012);
            Phase2SymComp(@Vph, @V012);
            for i := 1 to 3 do
            begin
                S := V012[i] * cong(I012[i]);
                Result[icount] := S.re * 0.003; // 3-phase kW conversion
                inc(icount);
                Result[icount] := S.im * 0.003; // 3-phase kvar conversion
                inc(icount);
            end;
        end;
        Reallocmem(cBuffer, 0);
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_SeqVoltages(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
// All voltages of active circuit element
// magnitude only
// returns a set of seq voltages (3) for each terminal
// 0, 1, 2 sequence  (0, +, -)
var
    Result: PDoubleArray0;
    i: Integer;
    V012: pComplexArray;
    S: String;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if MissingSolution(elem) or (not elem.Enabled) or (elem.NodeRef = NIL) then
        Exit;

    try
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 3 * elem.NTerms, 3, elem.NTerms);

        V012 := Allocmem(sizeof(Complex) * 3 * elem.Nterms);
        // get complex seq voltages
        CalcSeqVoltages(elem, V012);
        // return 0 based array
        for i := 1 to 3 * elem.Nterms do
            Result[i - 1] := Cabs(V012[i]);  // return mag only

        Reallocmem(V012, 0);  // throw away temp memory
